# CMPUT-412-503-W22-Competition-1

./: CMakeLists.txt  README.md  package.xml
launch/: course_1.launch  course_2.launch
urdf/: camera.xacro  turtlebot3_burger.urdf.xacro
worlds/: 0.material  1.material  2.material  3.material  4.material  5.material  6.material  blue_circle.material  blue_square.material  blue_triangle.material  course_1.world  course_2.world  green_circle.material  green_square.material  green_triangle.material  red_circle.material  red_square.material  red_triangle.material  yellow_circle.material  yellow_square.material  yellow_triangle.material
